fix:修复slider&select&time-picker

--- a/src/Doc/MASA.Blazor.Doc/Demos/Components/Pickers/children/DatePickers/misc/ActivePicker.razor
+++ b/src/Doc/MASA.Blazor.Doc/Demos/Components/Pickers/children/DatePickers/misc/ActivePicker.razor
@@ -17,6 +17,7 @@
                          ActivePicker="_activePicker"
                          OnActivePickerUpdate="val=>_activePicker=val"
                          Max="DateOnly.FromDateTime(DateTime.Now)"
+                         OnInput="()=>_menu=false"
                          Min="new DateOnly(1950,1,1)"></MDatePicker>
         </ChildContent>
     </MMenu>
