--- a/src/Doc/MASA.Blazor.Doc/Shared/MainLayout.razor
+++ b/src/Doc/MASA.Blazor.Doc/Shared/MainLayout.razor
@@ -28,7 +28,7 @@
     </MContainer>
 </MMain>
 
-<MNavigationDrawer Clipped Fixed Floating Right Top="80" Width="329" Class="default-toc py-4">
+<MNavigationDrawer Clipped Fixed Floating Right Top="80" Width="329" Height="@("100vh")" Class="default-toc py-4" Style="max-height: calc(100% - 80px);">
     <PrependContent>
         <div class="mb-2 text-h6 font-weight-medium text--primary" path="contents">目录</div>
     </PrependContent>
